--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,50 @@
-p {
-    color: aqua;
+* {
+    box-sizing: border-box;
+    margin: 0px;
+    padding: 0px;
+    border: 0px;
+}
+
+#calculator-shell {
+    border: solid black;
+    width: 400px;
+    height: 600px;
+    margin: auto;
+    margin-top: 20px;
+    padding: 5px;
+}
+
+#display {
+    border: solid blue;
+    height: 15%;
+    width: 95%;
+    margin: 4% auto;
+}
+
+#button-container {
+    /* border: solid green; */
+    width: 95%;
+    height: 77%;
+    margin: 4% auto;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    padding: 5px;
+}
+
+.row {
+    /* border: solid pink; */
+    flex: 1 0 0;
+    display: flex;
+    flex-direction: row;
+    gap: 5px;
+}
+
+#equals {
+    flex: 2.07 0 0;
+}
+
+button {
+    flex: 1 0 0;
+    font-size: 25px;
 }
