--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@
     margin-top: 20px;
     padding: 5px;
     background-color: steelblue;
+    border-radius: 20px;
 }
 
 #display-container {
@@ -24,6 +25,7 @@
     display: flex;
     justify-content: flex-end;
     align-items: center;
+    border-radius: 10px;
 }
 
 #button-container {
